|Added expirimental mp3 extension by default|Added relative path for imports|

--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
     "downloadPath":"",
     "ignorePunctuation": "True",
-    "MaxForvoDownloads": 100
+    "MaxForvoDownloads": 100,
+    "audioFileExtension": "mp3" 
 }
