Added optional use of sources besides Forvo

--- a/config.json
+++ b/config.json
@@ -3,5 +3,6 @@
     "ignorePunctuation": "True",
     "MaxForvoDownloads": 100,
     "audioFileExtension": "mp3",
-    "Remember language on a per deck basis":"False"
+    "Remember language on a per deck basis":"False",
+    "Use sources besides Forvo": "False"
 }
