--- a/.github/workflows/package-addon.yml
+++ b/.github/workflows/package-addon.yml
@@ -11,7 +11,5 @@ jobs:
 
       - name: Zip contents
         run: |
-          pwd
-          ls
-          ls ..
-    
+          zip -r ../ASFA.ankiaddon * -x LICENSE README.md githubAssets
+          uzip -l ../ASFA.ankiaddon
