--- a/.github/workflows/package-addon.yml
+++ b/.github/workflows/package-addon.yml
@@ -12,4 +12,4 @@ jobs:
       - name: Zip contents
         run: |
           zip -r ../ASFA.ankiaddon * -x LICENSE README.md githubAssets githubAssets/* @
-      - name: release zip
+      #- name: release zip
