--- a/.github/workflows/package-addon.yml
+++ b/.github/workflows/package-addon.yml
@@ -11,5 +11,5 @@ jobs:
 
       - name: Zip contents
         run: |
-          zip -r ../ASFA.ankiaddon * -x LICENSE README.md "**githubAssets/*"" @
+          zip -r ../ASFA.ankiaddon * -x LICENSE README.md "**/githubAssets/*"" @
       #- name: release zip
